src/jhoafparser/HOAFParser.java
/* Generated By:JavaCC: Do not edit this line. HOAFParser.java */
package jhoafparser;

import java.io.*;
import java.util.*;

public class HOAFParser implements HOAFParserConstants {
        //-----------------------------------------------------------------------------------
        // static member variables
        //-----------------------------------------------------------------------------------

        private static HOAFParser theParser = null;
        private static HOAConsumer consumer;
        private static HOAFParserSettings settings;
        private static Integer currentState;
        private static boolean currentStateHasStateLabel;


        //-----------------------------------------------------------------------------------
        // Initialization
        //-----------------------------------------------------------------------------------

        // Parse HOA automaton

        private static void initializeParser(InputStream str)
        {
                if (theParser == null) {
                        theParser = new HOAFParser(str);
                } else {
                        ReInit(str);
                }
        }


        //-----------------------------------------------------------------------------------
        // Methods for invokation of the parser
        //-----------------------------------------------------------------------------------

        /**
	 * Entry point for parsing HOAF files (with default settings).
	 * <br> Note: this parser is non-reentrant, i.e., it is
	 * not possible to parse two streams at the same time!
	 *
	 * @param str The input stream with the automaton description
	 * @param userConsumer The consumer that receives the notifications about the parsed elements from the parser
	 */
        public static void parseHOA(InputStream str, HOAConsumer userConsumer) throws ParseException {
                parseHOA(str, userConsumer, null);
        }

        /**
	 * Entry point for parsing HOAF files.
	 * <br> Note: this parser is non-reentrant, i.e., it is
	 * not possible to parse two streams at the same time!
	 *
	 * @param str The input stream with the automaton description
	 * @param userConsumer The consumer that receives the notifications about the parsed elements from the parser
	 * @param settings Settings for the parser (may be {@code null}) 
	 */
        public static void parseHOA(InputStream str, HOAConsumer userConsumer, HOAFParserSettings settings) throws ParseException
        {
                // (Re)start parser
                initializeParser(str);

                if (settings == null) {
                        // default settings
                        settings = new HOAFParserSettings();
                }
                HOAFParser.settings = settings;

                consumer = userConsumer;

                if (consumer.parserResolvesAliases()) {
                        consumer = new HOAIntermediateResolveAliases(consumer);
                }

                if (settings.getFlagValidate()) {
                        consumer = new HOAIntermediateCheckValidity(consumer);
                }

                currentState = null;

                // Parse
                try {
                        Automaton();
                }
                finally {
                        consumer = null;
                }
        }

        public static void notifyAbort() {
                throw new AbortedException();
        }

//-----------------------------------------------------------------------------------
// Top-level production
//-----------------------------------------------------------------------------------
  static final public void Automaton() throws ParseException {
    Header();
    jj_consume_token(BODY);
                consumer.notifyBodyStart();
    Body();
    jj_consume_token(END);
                if (currentState != null) {
                        consumer.notifyEndOfState(currentState);
                }
                consumer.notifyEnd();
  }

  static final public void Header() throws ParseException {
    Format();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATES:
      case START:
      case AP:
      case ALIAS:
      case ACCEPTANCE:
      case ACCNAME:
      case TOOL:
      case NAME:
      case PROPERTIES:
      case REG_HEADERNAME:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      HeaderItem();
    }
  }

  static final public void Format() throws ParseException {
        String version;
    jj_consume_token(HOA);
    version = Identifier();
                // TODO: Check version
                consumer.notifyHeaderStart(version);
  }

  static final public void HeaderItem() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATES:
      HeaderItemStates();
      break;
    case START:
      HeaderItemStart();
      break;
    case AP:
      HeaderItemAP();
      break;
    case ALIAS:
      HeaderItemAlias();
      break;
    case ACCEPTANCE:
      HeaderItemAcceptance();
      break;
    case ACCNAME:
      HeaderItemAccName();
      break;
    case TOOL:
      HeaderItemTool();
      break;
    case NAME:
      HeaderItemName();
      break;
    case PROPERTIES:
      HeaderItemProperties();
      break;
    case REG_HEADERNAME:
      HeaderItemMisc();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void HeaderItemStates() throws ParseException {
        Integer numberOfStates;
    jj_consume_token(STATES);
    numberOfStates = Integer();
                consumer.setNumberOfStates(numberOfStates);
  }

  static final public void HeaderItemStart() throws ParseException {
        List<Integer> startStates = new ArrayList<Integer>();
        int startState;
    jj_consume_token(START);
    startState = Integer();
                                 startStates.add(startState);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(AND);
      startState = Integer();
                                  startStates.add(startState);
    }
                consumer.addStartStates(startStates);
  }

  static final public void HeaderItemAP() throws ParseException {
        int apCount;
        List<String> aps = new ArrayList<String>();
        Set<String> apSet = new HashSet<String>();
        String ap;
    jj_consume_token(AP);
    apCount = Integer();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REG_STRING:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      ap = QuotedString();
              if (apSet.contains(ap)) {
                 {if (true) throw new ParseException("Atomic proposition \u005c""+ap+"\u005c" is a duplicate!");}
              }
              aps.add(ap);
              apSet.add(ap);
    }
                if (aps.size() != apCount) {
                        {if (true) throw new ParseException("Number of provided APs ("+aps.size()+") "+aps.toString()+" does not match number of APs that was specified ("+apCount+")");}
                }
                consumer.setAPs(aps);
  }

  static final public void HeaderItemAlias() throws ParseException {
        String alias;
        BooleanExpression<AtomLabel> labelExpression;
    jj_consume_token(ALIAS);
    alias = AliasName();
    labelExpression = LabelExpr();
                consumer.addAlias(alias, labelExpression);
  }

  static final public void HeaderItemAcceptance() throws ParseException {
        int accSetCount;
        BooleanExpression<AtomAcceptance> accExpr;
    jj_consume_token(ACCEPTANCE);
    accSetCount = Integer();
    accExpr = AcceptanceCondition();
                consumer.setAcceptanceCondition(accSetCount, accExpr);
  }

  static final public BooleanExpression<AtomAcceptance> AcceptanceCondition() throws ParseException {
        BooleanExpression<AtomAcceptance> left, right;
    left = AcceptanceConditionAnd();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(OR);
      right = AcceptanceConditionAnd();
                                                 left = left.or(right);
    }
          {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanExpression<AtomAcceptance> AcceptanceConditionAnd() throws ParseException {
        BooleanExpression<AtomAcceptance> left, right;
    left = AcceptanceConditionAtom();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      jj_consume_token(AND);
      right = AcceptanceConditionAtom();
                                                   left = left.and(right);
    }
                {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanExpression<AtomAcceptance> AcceptanceConditionAtom() throws ParseException {
        BooleanExpression<AtomAcceptance> expression = null;
        boolean negated = false;
        int accSet;
        AtomAcceptance acc;
        AtomAcceptance.Type temporalOperator;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPARENTH:
      jj_consume_token(LPARENTH);
      expression = AcceptanceCondition();
      jj_consume_token(RPARENTH);
      break;
    case REG_IDENT:
      temporalOperator = AcceptanceConditionTemporalOperator();
      jj_consume_token(LPARENTH);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOT:
        jj_consume_token(NOT);
                   negated = true;
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      accSet = Integer();
      jj_consume_token(RPARENTH);
               acc = new AtomAcceptance(temporalOperator, accSet, negated);
               expression = new BooleanExpression<AtomAcceptance>(acc);
      break;
    case TRUE:
      jj_consume_token(TRUE);
                   expression = BooleanExpression.TRUE();
      break;
    case FALSE:
      jj_consume_token(FALSE);
                   expression = BooleanExpression.FALSE();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  static final public AtomAcceptance.Type AcceptanceConditionTemporalOperator() throws ParseException {
  String temporalOperator;
    temporalOperator = Identifier();
      if (temporalOperator.equals("Fin")) {
         {if (true) return AtomAcceptance.Type.TEMPORAL_FIN;}
      } else if (temporalOperator.equals("Inf")) {
         {if (true) return AtomAcceptance.Type.TEMPORAL_INF;}
      } else {
         {if (true) throw new ParseException("Illegal operator '"+temporalOperator+"' in acceptance condition, expected either 'Fin' or 'Inf'");}
      }
    throw new Error("Missing return statement in function");
  }

  static final public void HeaderItemAccName() throws ParseException {
        String accName;
        List<Object> extraInfo = new ArrayList<Object>();
        String identifier;
        Integer integer;
    jj_consume_token(ACCNAME);
    accName = Identifier();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REG_INT:
      case REG_IDENT:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REG_IDENT:
        identifier = Identifier();
                                       extraInfo.add(identifier);
        break;
      case REG_INT:
        integer = Integer();
                                 extraInfo.add(integer);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                if (settings == null || !settings.getFlagIgnoreAccName()) {
                        consumer.provideAcceptanceName(accName, extraInfo);
                }
  }

  static final public void HeaderItemTool() throws ParseException {
        String tool;
        String version = null;
    jj_consume_token(TOOL);
    tool = QuotedString();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case REG_STRING:
      version = QuotedString();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
                consumer.setTool(tool, version);
  }

  static final public void HeaderItemName() throws ParseException {
        String name;
    jj_consume_token(NAME);
    name = QuotedString();
                consumer.setName(name);
  }

  static final public void HeaderItemProperties() throws ParseException {
        List<String> properties = new ArrayList<String>();
        String property;
    jj_consume_token(PROPERTIES);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REG_IDENT:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      property = Identifier();
                                  properties.add(property);
    }
                consumer.addProperties(properties);
  }

  static final public void HeaderItemMisc() throws ParseException {
        String headerName;
        List<Object> content = new ArrayList<Object>();
        Object o;
    headerName = HeaderName();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REG_INT:
      case REG_STRING:
      case REG_IDENT:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REG_INT:
        o = Integer();
                          content.add(o);
        break;
      case REG_IDENT:
        o = Identifier();
                             content.add(o);
        break;
      case REG_STRING:
        o = QuotedString();
                               content.add(o);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                consumer.addMiscHeader(headerName, content);
  }

  static final public void Body() throws ParseException {
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STATE:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      StateName();
      Edges();
    }
  }

  static final public void StateName() throws ParseException {
        BooleanExpression labelExpr = null;
        Integer state;
        String stateComment = null;
        List<Integer> accSignature = null;
    jj_consume_token(STATE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      labelExpr = Label();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    state = Integer();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case REG_STRING:
      stateComment = QuotedString();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCURLY:
      accSignature = AcceptanceSignature();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
                if (currentState != null) {
                        consumer.notifyEndOfState(currentState);
                }
                consumer.addState(state, stateComment, labelExpr, accSignature);
                // store global information:
                currentState = state;
                currentStateHasStateLabel = (labelExpr != null);
  }

  static final public void Edges() throws ParseException {
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
      case REG_INT:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_10;
      }
      Edge();
    }
  }

  static final public void Edge() throws ParseException {
        BooleanExpression labelExpr = null;
        List<Integer> conjStates;
        List<Integer> accSignature = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      labelExpr = Label();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    conjStates = StateConjunction();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCURLY:
      accSignature = AcceptanceSignature();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
                if (labelExpr != null || currentStateHasStateLabel) {
                        consumer.addEdgeWithLabel(currentState, labelExpr, conjStates, accSignature);
                } else {
                        consumer.addEdgeImplicit(currentState, conjStates, accSignature);

                }
  }

  static final public BooleanExpression<AtomLabel> Label() throws ParseException {
        BooleanExpression<AtomLabel> labelExpr;
    jj_consume_token(LBRACKET);
    labelExpr = LabelExpr();
    jj_consume_token(RBRACKET);
         {if (true) return labelExpr;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanExpression<AtomLabel> LabelExpr() throws ParseException {
        BooleanExpression<AtomLabel> left, right;
    left = LabelExprAnd();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_11;
      }
      jj_consume_token(OR);
      right = LabelExprAnd();
                                        left = left.or(right);
    }
          {if (true) return left;}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanExpression<AtomLabel> LabelExprAnd() throws ParseException {
        BooleanExpression<AtomLabel> left, right;
    left = LabelExprAtom();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_12;
      }
      jj_consume_token(AND);
      right = LabelExprAtom();
                                          left = left.and(right);
    }
          {if (true) return left;}
    throw new Error("Missing return statement in function");
  }
